# SCIM

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: CFITree.h  Cluster.h  ECMI.h  FpTree.h  dual_scaling.h  leitorbasenumerica.h
src/: CFITree.cpp  Cluster.cpp  ECMI.cpp  FpTree.cpp  main.cpp
